# zenml-projects

./: .codespell-ignore-words  .gitignore  .gitmodules  .typos.toml  ADDING_PROJECTS.md  CLAUDE.md  COMPLIANCE.md  CONTRIBUTING.md  README.md  constants.py  generate_sandbox_dockerfile.py  generate_zenfile.py  generate_zenml_project.py  output.txt  pyproject.toml  render_template.py  requirements.txt  run.py  streamlit_app.py  test_starcoder.py
.github/: PULL_REQUEST_TEMPLATE.md
Atari-Game-Player/: README.md  ReadMe.md  run_pipeline.py
Powerful DQN/: GameWrap.py  agent.py  replay_buffer.py  train_dqn.py
airflow-cloud-composer-etl-feature-train/: .gitignore  README.md  data.csv  demo.py  requirements.txt  run.py
app/: modal_deployment.py  schemas.py
art-rl/: .env.example  README.md  requirements.txt  run.py
atari-game-play/: README.md  requirements.txt  run.py  run_pipeline.py
azure/: vms.csv
bank_subscription_prediction/: Dockerfile.codespace  README.md  __init__.py  run.py  (+2 more)
docs-chat/: pyproject.toml  slackbot_requirements.txt
docs-chat/src/: Procfile  app.py  callback.py  fly.toml  hf_run.py  main.py  query_data.py  run.py  slack_bot.py  slack_reader.py
docs-chat/src/.github/workflows/: fly.yml
docs-chat/src/pipelines/: build_indices.py
docs-chat/src/steps/: gitbook_docs_loader.py  slack_loader.py
docs-chat/src/templates/: index.html
gitflow/: .dockerignore  .flake8  .gitignore  README.md  config.yaml  pyproject.toml  requirements-aws.in  requirements-aws.txt  requirements-base.in  requirements-gcp.in  requirements-gcp.txt  requirements-local.in  requirements.txt  run.py
gitflow/.github/workflows/: production.yaml  staging.yaml
gitflow/pipelines/: __init__.py  end_to_end.py  training.py
gitflow/scripts/: check-spelling.sh  format.sh  lint.sh
gitflow/stacks/: setup_local_stack.sh  setup_prod_stack.sh  setup_staging_stack.sh
gitflow/steps/: data_loaders.py  data_validators.py  model_appraisers.py  model_evaluators.py  model_loaders.py  model_trainers.py
gitflow/utils/: kubeflow_helper.py  model_helper.py  report_generators.py  tracker_helper.py
hub-example/: README.md  hub-example.ipynb  pyproject.toml  run.py
llm-agents/: .flake8  README.md  copier.yml  pyproject.toml  requirements.txt  run.ipynb  run.py
llm-agents/agent/: agent_executor_materializer.py  prompt.py
llm-agents/configs/: agent_config.yaml
llm-agents/materializers/: agent_executor_materializer.py  faiss_materializer.py
llm-agents/pipelines/: agent_creator.py
llm-agents/src/: requirements.txt  run.ipynb  run.py
llm-agents/src/agent/: agent_executor_materializer.py  prompt.py
llm-agents/src/pipelines/: agent_creator.py
llm-agents/src/steps/: agent_creator.py  index_generator.py  url_scraper.py  web_url_loader.py
llm-agents/steps/: agent_creator.py  index_generator.py  url_scraper.py  url_scraping_utils.py  web_url_loader.py
omni-reader/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.codespace  Dockerfile.sandbox  README.md  app.py  config.yaml  main.py  pyproject.toml  requirements.txt  run.py  run_compare_ocr.py  settings.json
omni-reader/configs/: batch_pipeline.yaml  config.yaml  evaluation_pipeline.yaml  ocr_config.yaml
omni-reader/ground_truth_texts/: education_article_excerpt.txt  incomplete_sentence.txt  lexus_vin_number.txt  montreal_signs.txt  paris_signs.txt  reporter_notes.txt  rx_prescription_clear.txt  rx_prescription_unclear.txt  tire_serial_number.txt
omni-reader/pipelines/: __init__.py  batch_pipeline.py  evaluation_pipeline.py  ocr_pipeline.py
omni-reader/schemas/: __init__.py  image_description.py  ocr_result.py
omni-reader/steps/: __init__.py  evaluate_models.py  load_files.py  loaders.py  run_gemma3_ocr.py  run_mistral_ocr.py  run_ocr.py  save_results.py
omni-reader/utils/: __init__.py  config.py  encode_image.py  extract_json.py  integrations.py  io_utils.py  metrics.py  model_configs.py  model_info.py  ocr_model_utils.py  ocr_processing.py  prompt.py  visualizations.py
supabase-openai-summary/: README.md  pyproject.toml
supabase-openai-summary/src/: requirements.txt  run.py
supabase-openai-summary/src/pipelines/: supabase_summary.py
supabase-openai-summary/src/steps/: alerters.py  importers.py  summarizers.py
time-series-forecast/: .gitignore  README.md  pyproject.toml  requirements.txt
time-series-forecast/src/: Dockerfile  config.yaml  main.py
time-series-forecast/src/data/: README.md
time-series-forecast/src/pipelines/: time_series_pipeline.py
time-series-forecast/src/steps/: evaluator.py  importer.py  preparator.py  trainer.py  transformer.py
zen-news-summarization/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
zen-news-summarization/alerter/: discord_alerter.py  discord_alerter_flavor.py
zen-news-summarization/cli/: __init__.py  base.py  constants.py  profile.py  sources.py  utils.py
zen-news-summarization/materializers/: article_materializer.py
zen-news-summarization/models/: __init__.py  article.py  config.py  profile.py  schedule.py  summary.py
zen-news-summarization/pipelines/: __init__.py  zen_news_pipeline.py
zen-news-summarization/src/zennews/: __init__.py
zen-news-summarization/src/zennews/alerter/: discord_alerter.py  discord_alerter_flavor.py
zen-news-summarization/src/zennews/cli/: __init__.py  base.py  constants.py  sources.py  utils.py
zen-news-summarization/src/zennews/materializers/: article_materializer.py
zen-news-summarization/src/zennews/models/: __init__.py  article.py
zen-news-summarization/src/zennews/pipelines/: __init__.py  zen_news_pipeline.py
zen-news-summarization/src/zennews/steps/: __init__.py
zen-news-summarization/src/zennews/steps/report/: report.py
zen-news-summarization/src/zennews/steps/sources/: bbc.py
zen-news-summarization/src/zennews/steps/summarize/: bart_large_cnn_samsum.py
zen-news-summarization/steps/: __init__.py
zen-news-summarization/steps/report/: report.py
zen-news-summarization/steps/sources/: __init__.py  bbc.py
zen-news-summarization/steps/summarize/: bart_large_cnn_samsum.py
(+1971 files in other folders)
