[tool.poetry]
name = "zenml-projects"
version = "1.0.0"
description = "Explore MLOps production use-cases with ZenML."
authors = ["ZenML CodeMonkey <codemonkey@zenml.io>"]

[tool.poetry.dependencies]
python = ">=3.7.0,<3.9.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = []
skip_glob = []
line_length = 79

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''
