[tool.poetry]
name = "zenml-projects"
version = "1.0.0"
description = "Explore MLOps production use-cases with ZenML."
authors = ["ZenML CodeMonkey <codemonkey@zenml.io>"]

[tool.poetry.dependencies]
python = ">=3.7.0,<3.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
darglint = "1.8.1"
ruff = ">=0.0.254"
pyspelling = "^2.8.2"
mypy = ">=1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = []
skip_glob = []
line_length = 79

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''
