[tool.poetry]
name = "zenml-gitflow"
version = "0.1.0"
packages = [
    { include = "zenml-gitflow", from = "src" },
]
description = "How to use ZenML with GitOps"
authors = ["ZenML GmbH <info@zenml.io>"]
readme = "README.md"
homepage = "https://zenml.io"
repository = "https://github.com/zenml-io/zenml"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.7.1,<=3.10"
pip-tools = ">=6.12.1"
zenml = "^0.32.0"
pdfkit = ">=1.0.0"

[tool.poetry.dev-dependencies]
black = "22.3.0"
flake8 = "^3.9.2"
interrogate = "^1.4.0"
isort = "^5.9.3"
pre-commit = "^2.14.0"
autoflake = "^1.4"
codespell = "^2.1.0"

[tool.isort]
profile = "black"
known_third_party = []
skip_glob = []
line_length = 80

[tool.black]
line-length = 80

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 95
exclude = []
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 1
quiet = false
whitelist-regex = []
color = true
