[tool.poetry]
name = "ocr-king"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.13"
instructor = ">=1.7.7"
jiwer = ">=3.0.5"
litellm = ">=1.64.1"
mistralai = ">=1.6.0"
mlflow = ">=2.21.2"
ollama = ">=0.3.3"
pillow = ">=11.1.0"
polars = ">=1.26.0"
streamlit = ">=1.44.0"
textdistance = ">=4.6.3"
# Custom fork for zenml which overrides pydantic to allow version 2.10.3:
zenml = { git = "https://github.com/marwan37/zenml.git", branch = "main" }

[tool.poetry.group.dev.dependencies]
pytest = ">=6.2.5"
darglint = ">=1.8.1"
ruff = ">=0.0.254"
pyspelling = ">=2.8.2"
mypy = ">=1.0.0"

[tool.ruff]
line-length = 120
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    ".test_durations",
    "build",
    "dist",
    "node_modules",
    "venv",
    "__init__.py",
]
target-version = "py38"

[tool.ruff.format]
exclude = [
    "*.git",
    "*.hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "__init__.py",
]

[tool.ruff.lint]
unfixable = ["F401"]
per-file-ignores = {}
ignore-init-module-imports = true
ignore = [
    "E501",
    "F401",
    "F403",
    "D301",
    "D401",
    "D403",
    "D407",
    "D213",
    "D203",
    "S101",
    "S104",
    "S105",
    "S106",
    "S107",
]
select = ["D", "E", "F", "I", "I001", "Q"]

[tool.ruff.lint.flake8-import-conventions.aliases]
altair = "alt"
"matplotlib.pyplot" = "plt"
numpy = "np"
pandas = "pd"
seaborn = "sns"

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.pydocstyle]
convention = "google"
