[tool.poetry]
name = "supabase-openai-summary"
version = "0.0.1"
description = "A Supabase summary pipeline for OpenAI's GPT-4 model."
authors = ["ZenML"]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
zenml = { extras = ["server"], version = "0.38.0" }
openai = ">=0.27.5"
slack-sdk = ">=3.16.1"
aiohttp = ">=3.8.1"
supabase = ">=0.5.0"
gcsfs = ">=2023.4.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = []
skip_glob = []
line_length = 79

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''
